set up environment(database)

--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -3,6 +3,8 @@ WORKDIR /app
 COPY . .
 RUN go mod init github.com/yuhsuan105/go_test
 RUN go get -u github.com/gin-gonic/gin
+RUN go get -u gorm.io/driver/mysql
+RUN go get -u gorm.io/gorm
 RUN go mod tidy
 RUN go build -o appbin main.go
 CMD ["./appbin"]
