--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,25 @@ services:
         build:
             context: .
             dockerfile: Dockerfile-mysql
+        ports: 
+            - "3306:3306"
         volumes:
-            - db_data:/var/lib/mysql
+            - ./db_data:/var/lib/mysql
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: ${DB_PWD}
             MYSQL_DATABASE: ${DB_NAME}
     
     app:
+        depends_on:
+            - "db"
         build:
             context: .
             dockerfile: Dockerfile-app
+        ports: 
+            - "8080:8080"
         environment:
-            DB_HOST: ${DB_HOST}
+            DB_HOST: "db:3306"
             DB_NAME: ${DB_NAME}
             DB_USER: ${DB_USER}
             DB_PWD: ${DB_PWD}
